2022-12-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Update the news.

	* magick/command.c: Add use of GetFirstImageInList() where needed
	to assure that the list pointer is to the first image.

	* magick/constitute.c (ReadImage): Only perform subimage
	processing when required.

	* magick/command.c (MogrifyImages): Restore mogrify_images as
	first image in list since the rest of the code expects that.

2022-12-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/mat.c (ReadMATImageV4): Use ReplaceImageInList().
	(ReadMATImage): Use ReplaceImageInList().

	* magick/command.c (MogrifyImages): Remove band-aid.

	* magick/list.c (AppendImageToList): Image list is updated to be
	new image.

	* magick/image.c (AllocateImage): Initialize colors directly.
	(GetImageInfo): Initialize colors directly.

	* utilities/tests/convert-cmds.txt: Add more convert command
	permutations.

2022-12-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh: Update shared library versioning in preparation for
	1.3.39 release.

	* NEWS.txt: Updated the news.

2022-12-25 Fojtik Jaroslav  <JaFojtik@yandex.com>

	* jp2/src/appl/jasper.c: Link problem with jasper utility fixed.

2022-12-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/gem.c (Contrast): Visual Studio 17.4.3 does not like
	initializing a static constant with "0.5+MagickEpsilon" in
	/precise mode.

	* magick/enhance.c (ContrastImagePixels): Visual Studio 17.4.3
	does not like initializing a static constant with
	"0.5+MagickEpsilon" in /precise mode.

2022-12-25 Fojtik Jaroslav  <JaFojtik@yandex.com>

	* webp/src/webp/types.h Need to include inttypes.h
        * jp2/src/libjasper/include/jasper/jas_types.h
		Fix missing _PFX_PTR in newer MSVC.

2022-12-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/symbols.h: Update symbol remappings which are enabled by
	PREFIX_MAGICK_SYMBOLS.  The only new symbol since the last release
	is IsEventLogged().
