@@ -40,6 +40,8 @@
 <p>2022-12-29  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li><p>coders/pnm.c (ReadPNMImage): Compute the number of threads to
+use.</p></li>
 <li><p>NEWS.txt: Update the news.</p></li>
 <li><p>magick/command.c: Add use of GetFirstImageInList() where needed
 to assure that the list pointer is to the first image.</p></li>
